ajout des methode, PatchMapping et PostMapping